# data-modelling-storage-service

./: .behaverc  .dockerignore  .env-template  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.win10  README.md  README_Equinor.md  app.py  coverage.txt  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.radix.yml  docker-compose.win10.yml  docker-compose.windows.yml  docker-compose.yml  generate-api.bat  generate-docs.sh  generate-python-client.sh  generate-python-package.sh  generate-web.sh  init-sql.sh  pip.ini  pyproject.toml  pytest.ini  radixconfig.yaml  release-notes.md  release-please-config.json  requirements.txt  reset-database.sh  travis-scripts.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: checks.yml  create-release-pr.yaml  on-master-push.yml  on-push.yml  on-tag.yml  publish-to-docker-registry.yml  publish-to-pypi.yml  publish.yml  radix-deploy.yml  stale.yml  testing.yml
api/: app_commands.py  config.py  generate_system_blueprints.py  init.sh  reset-database.sh
api/classes/: blueprint.py  blueprint_attribute.py  data_source.py  dimension.py  dto.py  recipe.py  repository.py  schema.py  storage_recipe.py  tree_node.py  ui_recipe.py  user.py
api/core/: enums.py  utility.py
api/core/repository/: __init__.py  data_source_repository.py  repository_exceptions.py  repository_factory.py
api/core/rest/: Actions.py  Blueprints.py  DataSource.py  Document.py  Explorer.py  Index.py  System.py
api/core/serializers/: dto_json_serializer.py  get_data_source_serializer.py
api/core/service/: document_service.py
api/core/shared/: request_object.py  use_case.py
api/core/storage/: data_source.py  repository_exceptions.py  repository_interface.py
api/core/use_case/: add_document_to_path_use_case.py  add_document_use_case.py  add_file_use_case.py  add_raw.py  add_root_package_use_case.py  create_application_use_case.py  create_data_source_use_case.py  export_use_case.py  generate_index_use_case.py  generate_json_schema_use_case.py  generate_python_code.py  get_application_settings_use_case.py  get_blob_use_case.py  get_blueprints_use_case.py  get_data_source_use_case.py  get_data_sources_use_case.py  get_document_by_path_use_case.py  get_document_use_case.py  move_file_use_case.py  remove_by_path_use_case.py  remove_use_case.py  rename_file_use_case.py  search_use_case.py  update_document_use_case.py
api/home/: settings.json
api/request_types/: create_data_source.py  shared.py
api/services/: database.py
api/tests_bdd/: environment.py
api/utils/: authentication.py  form_to_schema.py  form_to_ui_schema.py  get_data_type.py  helper_functions.py  logging.py  package_import.py
controllers/: blob_controller.py  datasource_controller.py  document_controller.py  explorer_controller.py  package_controller.py  search_controller.py  status_codes.py
docs/: index.html
main-api/: .gitignore  Dockerfile  README.md  docker-compose.yml  generate-api.sh
main-api/controllers/: document_controller.py
main-api/openapi/: api.yaml
openapi/: api.yaml
src/: alembic.ini  app.py  config.py  enums.py  init.sh  init_dev.sh  reset-database.sh  runSQLclient.py  run_uvicorn.py  set_system_local.py  sql_system_DS_template.json  system_DS.json  system_DS_template.json  test.json  version.txt
src/SIMOS/: Blueprint.json  BlueprintAttribute.json  Entity.json  File.json  Meta.json  PDF.json  Package.json  RecipeLink.json  SQLReference.json  Secret.json  SecretContent.json  UiAttribute.json  UiAttributeOption.json  UiRecipe.json  ViewConfig.json
src/alembic/: env.py
src/authentication/: access_control.py  authentication.py  get_app_role_assignments.py  mock_users.py  models.py  pat_role_checker.py  personal_access_token.py  utils.py
src/common/: address.py  exceptions.py  reference.py  responses.py  tree_node_serializer.py
src/controllers/: access_control_controller.py  blob_controller.py  blueprint_controller.py  datasource_controller.py  document_controller.py  explorer_controller.py  export_controller.py  healtcheck_controller.py  package_controller.py  personal_access_token_controller.py  reference_controller.py  search_controller.py  whoami_controller.py
src/domain_classes/: blueprint.py  blueprint_attribute.py  dependency.py  dimension.py  document_look_up.py  dto.py  lookup.py  repository.py  storage_recipe.py  tree_node.py  ui_recipe.py  user.py
src/home/: .dockerignore  settings.json
src/interfaces/: interfaces.py
src/restful/: response_object.py  status_codes.py  use_case.py
src/services/: azure_ad_get_app_role_assignments.py  database.py  document_service.py  graph_api_client.py  role_assignments_provider.py
src/storage/: auth_data_source_wrapper.py  data_source_class.py  data_source_interface.py  repository_interface.py
src/tests/: README.md
src/use_case/: add_document_to_path_use_case.py  add_document_use_case.py  add_file_use_case.py  add_raw.py  add_root_package_use_case.py  create_data_source_use_case.py  delete_reference_use_case.py  export_use_case.py  find_packages_use_case.py  find_parent_package_use_case.py  find_parent_packages_use_case.py  get_acl_use_case.py  get_blob_use_case.py  get_blueprint.py  get_data_source_use_case.py  get_data_sources_use_case.py  get_document_by_path_use_case.py  get_document_use_case.py  insert_reference_use_case.py  move_file_use_case.py  put_blob_use_case.py  remove_by_path_use_case.py  remove_use_case.py  rename_file_use_case.py  resolve_blueprint.py  search_use_case.py  set_acl_use_case.py  update_document_use_case.py
src/utils/: build_complex_search.py  cosmos_rate_limit_handler.py  create_entity.py  delete_documents.py  encryption.py  exceptions.py  find_document_by_path.py  get_blueprint.py  get_complete_document_by_id.py  get_document_by_path.py  get_resolved_document_by_id.py  graph_api_client.py  logging.py  mock_token_generator.py  package_import.py  sort_entities_by_attribute.py  string_helpers.py  tls_utils.py  token_generator.py  valid_extended_type.py  validators.py  wipe_db.py
(+644 files in other folders)
