[tool.poetry]
name = "Data Modeling Storage Service"
version = "1.27.0" # x-release-please-version
description = "A model based storage service"
authors = ["Stig Ofstad <stoo@equinor.com>","Christoffer","Eirik"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "4.6.3"
azure-storage-blob = "^12.18.3"
fastapi = "^0.109.2"
python-multipart = "^0.0.9"
uvicorn = "^0.23.2"
click = ">8.0.0"
aiofiles = "^0.7.0"
python-jose = "^3.3.0"
cachetools = "^5.3.2"
cryptography = "^42.0.4"
cffi = "^1.16.0"
httpx = "^0.26.0"
pydantic = "^2.6.1"
azure-monitor-opentelemetry = "^1.2.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
pyinstrument = "4.6.2"
pydantic-settings = "^2.2.1"
redis = {extras = ["hiredis"], version = "^5.0.4"}

[tool.poetry.group.dev.dependencies]
pydevd = "^2.10.0"
behave = "^1.2.6"
terminaltables = "^3.1.10"
deepdiff = "^5.8.1"
pygments = "^2.16.1"
pytest = "^7.4.3"
dictdiffer = "^0.9.0"
setuptools = "^68.2.2"
icecream = "^2.1.3"

[tool.pytest]
addopts = ["--ignore gen"]

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]

[tool.ruff]

src = ["src"]
target-version = "py312"
line-length = 120  # This is the prefered line-length. ruff will _try_ to make this

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "S",  # Bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # automatically upgrade syntax for newer versions of the language
    "RUF", # ruff specific rules
]

ignore = [
    "W191", # conflict with ruff formatter
    "B008",  # do not perform function calls in argument defaults
    "E501",  # line too long (ruff formater is doing the best it can. Fix them yourself if you dont like the line length)
    "C901",  # Code complexity
    "RUF012", # Pydantic class variables
    "S101",  # Use of "assert"
]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = false
check_untyped_defs = true
allow_redefinition = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
