[project]
name = "data-modeling-storage-service"
version = "1.28.3" # x-release-please-version
description = "A model based storage service"
authors = [ { name = "Stig Ofstad", email = "stoo@equinor.com" }, { name = "Christopher Collin Løkken", email = "chcl@equinor.com" }, { name = "Eirik Ola Aksnes", email = "eaks@equinor.com" }]
license = { text = "MIT" }

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "4.16.0"
azure-storage-blob = "^12.28.0"
fastapi = "^0.135.1"
python-multipart = "^0.0.22"
uvicorn = "^0.41.0"
click = ">8.0.0"
aiofiles = "^25.1.0"
python-jose = "^3.5.0"
cachetools = "^7.0.1"
cryptography = "^45.0.7"
cffi = "^2.0.0"
httpx = "^0.28.1"
pydantic = "^2.12.5"
azure-monitor-opentelemetry = "^1.2.0"
opentelemetry-instrumentation-fastapi = "^0.60b1"
pyinstrument = "4.6.2"
pydantic-settings = "^2.13.1"
redis = {extras = ["hiredis"], version = "^7.2.1"}
sqlalchemy = "^2.0.47"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pydevd = "^3.4.1"
behave = "^1.3.3"
terminaltables = "^3.1.10"
deepdiff = "^8.6.1"
pygments = "^2.19.2"
pytest = "^8.3.5"
dictdiffer = "^0.9.0"
setuptools = "^82.0.0"
icecream = "^2.1.10"

[tool.pytest]
addopts = ["--ignore gen"]

[tool.pytest.ini_options]
# Makes pytest CLI discover markers and conftest settings:
markers = [
    "unit: mark a test as unit test.",
    "integration: mark a test as integration test."
]
testpaths = [
    "tests/unit",
    "tests/integration"
]
pythonpath = [
    "src"
]

[tool.ruff]

src = ["src"]
target-version = "py312"
line-length = 120  # This is the prefered line-length. ruff will _try_ to make this

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "S",  # Bandit
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # automatically upgrade syntax for newer versions of the language
    "RUF", # ruff specific rules
]

ignore = [
    "W191", # conflict with ruff formatter
    "B008",  # do not perform function calls in argument defaults
    "E501",  # line too long (ruff formater is doing the best it can. Fix them yourself if you dont like the line length)
    "C901",  # Code complexity
    "RUF012", # Pydantic class variables
    "S101",  # Use of "assert"
]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = false
check_untyped_defs = true
allow_redefinition = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

